Prepare for Railway deployment - Update CORS, session config, add railway.json, and Node.js version

--- a/.env.example
+++ b/.env.example
@@ -2,21 +2,24 @@
 
 # Server Configuration
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
-# MySQL Database Configuration
-DB_HOST=localhost
+# MySQL Database Configuration (Railway will provide these)
+DB_HOST=your-mysql-host.railway.app
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=zanko_clinic
+DB_PASSWORD=your-database-password
+DB_NAME=railway
 DB_PORT=3306
 
-# Session Configuration
-SESSION_SECRET=zanko-clinic-secret-key-2025
+# Session Configuration (Generate a strong secret for production)
+SESSION_SECRET=your-super-secret-session-key-here
 
 # Application Configuration
 APP_NAME=Zanko Cleaning Clinic
 APP_VERSION=2.0.0
+
+# Frontend URL (for CORS in production)
+FRONTEND_URL=https://your-app.railway.app
 
 # Sample Data Configuration
 # Set to 'true' only for initial setup or development
